web-infras/parser/tests/fixtures/esprima/es2017/async/invalid-await/invalid-await-declaration3/output.txt
[SyntaxError]: Modifier await can not using in there. (1,26)
1|class X { async function f() { let await } }
 |                        ^
[SyntaxError]: Missing semicolon or line terminator. (1,26)
1|class X { async function f() { let await } }
 |                        ^
